Made all corners rounded and fixed button spacing.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,6 +96,7 @@ video {
     width: 100%;
     height: 100%;
     aspect-ratio: auto 1280 / 720;
+    border-radius: 5px;
 }
 
 .halved {
@@ -136,7 +137,7 @@ video {
     opacity: 0;
     transition: opacity 0.3s;
 
-    border-radius: 15px;
+    border-radius: 5px;
 
     /* aspect-ratio: 13 / 11;
     object-fit: contain; */
@@ -445,6 +446,7 @@ a:active {
     border: none;
     outline: none;
     transition: 0.4s;
+    border-radius: 5px 5px 0px 0px;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -459,6 +461,7 @@ a:active {
     background-color: #dadad3;
     display: none;
     overflow: hidden;
+    border-radius: 0px 0px 5px 5px;
 }
 
 .accordion:after {
@@ -626,7 +629,7 @@ a:active {
 
 /* .fullwrap img */
 .card-wrapper img {
-    border-radius: 15px;
+    border-radius: 5px;
     width: 100%;
     /* max-width: 100%;
     height: 100%; */
